# translator

./: .gitignore  LICENCE.md  Pipfile  README.md  agent.py  chat.py  llm.py  main.py  pyproject.toml  system_prompt.py  translator.py
