[project]
name = "llm-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "watchdog>=6.0.0",
]
